[project]
name = "pymafia"
dynamic = ["version"]
description = "A Python module and bridge for reflecting KoLmafia's Java environment"
authors = [{ name = "MrFizzyBubbs", email = "mrfizzybubbs@protonmail.com" }]
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10, <3.12"
dependencies = ["jpype1>=1.4.1", "wrapt>=1.15.0"]

[project.urls]
Repository = "https://github.com/MrFizzyBubbs/pymafia"
Releases = "https://github.com/MrFizzyBubbs/pymafia/releases"

[tool.uv]
dev-dependencies = [
    "docformatter>=1.7.5",
    "docformatter[tomli]>=1.7.5 ; python_full_version < '3.11'",
    "ipykernel>=6.29.5",
    "licensecheck>=2024.3",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["pymafia", "pymafia_config"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Unused import
    "F403", # Wildcard import
]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Disable error: Overloaded function signature 2 will never be matched: signature 1's parameter type(s) are the same or broader [misc]
module = "pymafia.ash.library"
ignore_errors = true

[tool.yamlfix]
explicit_start = false

[tool.pytest.ini_options]
pythonpath = "src"

[tool.licensecheck]
using = "requirements:requirements.txt"

[tool.docformatter]
recursive = true
black = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
