[metadata]
name = pymafia
version = 0.0.2
author = MrFizzyBubbs
author_email = MrFizzyBubbs@protonmail.com
description = A Python module and bridge for reflecting KoLmafia's Java environment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrFizzyBubbs/pymafia
project_urls =
    Bug Tracker = https://github.com/MrFizzyBubbs/pymafia/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.9
install_requires =
    pyjnius >= 1.4